# CageModeler

./: .gitmodules
boundingproxy/: CMakeLists.txt  main.cpp
cage_generation/: CMakeLists.txt  main.cpp
viewer/app/: CMakeLists.txt
viewer/app/Editor/: Editor.cpp
viewer/app/Mesh/Operations/: MeshGenerateCageOperation.cpp  MeshGenerateCageOperation.h
viewer/app/Mesh/Operations/CageGenerationSteps/: RemeshOperator.h
viewer/app/UI/: ProjectModel.h  ProjectSettingsPanel.cpp
